--- a/quickstart/project-setup.mdx
+++ b/quickstart/project-setup.mdx
@@ -1,5 +1,5 @@
 ---
-title: "1. Clone & Setup Boilerplate"
+title: "1. Setup Boilerplate"
 description: "Get your BuildWithAI boilerplate up and running in minutes"
 ---
 
@@ -31,40 +31,18 @@ Before you begin, follow our guides to set up the following tools and accounts (
 ## Setup Process
 
 <Steps>
-  <Step title="Clone the Boilerplate">
-    <Tabs>
-      <Tab title="Cursor IDE (Recommended)">
-        1. Open **Cursor IDE**
-        2. Click **Clone Repo**
-        3. Paste this GitHub repository URL:
-           ```
-           https://github.com/steffensunbranch/buildwithai-boilerplate.git
-           ```
-        4. Click **Clone from GitHub**
-        5. Sign in to GitHub when prompted
-        6. Choose where to save your project
-        7. Click **Open** when the clone completes
-      </Tab>
-      <Tab title="Windsurf IDE">
-        1. Open **Windsurf IDE**
-        2. Click **Clone Repo**
-        3. Paste this GitHub repository URL:
-           ```
-           https://github.com/steffensunbranch/buildwithai-boilerplate.git
-           ```
-        4. Click **Clone from GitHub**
-        5. Sign in to GitHub when prompted
-        6. Choose where to save your project
-        7. Click **Open** when the clone completes
-      </Tab>
-    </Tabs>
+  <Step title="Unpack the Boilerplate">
+    1. Locate the downloaded **BuildWithAI-Boilerplate.zip** file
+    2. Extract the ZIP file to your preferred location
+    3. Open your preferred IDE (Cursor, Windsurf, or any other code editor)
+    4. Open the extracted folder in your IDE
 
     <Info>
-      This method automatically handles the Git setup and opens your project in the correct location.
+      Make sure to extract the ZIP file completely before opening it in your IDE to ensure all files are accessible.
     </Info>
   </Step>
   <Step title="Install Dependencies">
-    Open the integrated terminal in your IDE (`Ctrl+J` / `Cmd+J` for Cursor, or `Ctrl+Shift+` for Windsurf) and run:
+    Open the integrated terminal in your IDE and run:
 
     ```bash
     npm install
