UPDATE: sentry and posthog

--- a/features/posthog-setup-v2.mdx
+++ b/features/posthog-setup-v2.mdx
@@ -32,6 +32,10 @@ icon: "chart-line"
   </Step>
 </Steps>
 
+<Check>
+  The wizard will install dependencies and update the relevant files, configuring PostHog analytics in your codebase.
+</Check>
+
 ## Step 2: Test the Implementation
 
 <Steps>
