--- a/features/auth/google-auth.mdx
+++ b/features/auth/google-auth.mdx
@@ -5,8 +5,14 @@ icon: "google"
 ---
 
 <Warning>
-  **App Store Requirement**: If you're implementing Google Sign-In (or any third-party authentication system) in your iOS app, Apple requires that you must also implement Apple Sign-In to pass the App Store review process. See [Apple's guidelines](https://developer.apple.com/app-store/review/guidelines/#sign-in-with-apple) for more details, and follow our [Apple Sign-In guide](/features/auth/apple-auth) to implement this required feature.
+  **App Store Requirement**: Apple requires that if you implement any third-party authentication in your iOS app, you **must** also implement Apple Sign-In to pass App Store review. See our [Apple Sign-In guide](/features/auth/apple-auth).
 </Warning>
+
+## Prerequisites
+
+Before setting up Google Sign-In, make sure you have:
+
+- [Set up your Supabase project](/quickstart/supabase-setup) with basic configuration
 
 ## Step 1: Set Up a Google Cloud Project
 
