superwall - no rc

--- a/features/mcp.mdx
+++ b/features/mcp.mdx
@@ -32,8 +32,7 @@ You can easily add the BuildWithAI MCP server to Cursor:
    
 4. Follow the instructions in Cursor to add the BuildWithAI MCP server
 
-## Configuring the MCP Server in Windsurf
-
+<Accordion title="Configuring the MCP Server in Windsurf">
 If you prefer using Windsurf instead of Cursor, follow these steps:
 
 ### 1. Add the BuildWithAI MCP Server
@@ -94,6 +93,7 @@ After editing the configuration:
 5. You should now see BuildWithAI appearing in your list of available MCP servers
 
 ![BuildWithAI MCP Server in Windsurf](/images/mpc-windsurf.png)
+</Accordion>
 
 ## Using the BuildWithAI MCP Server
 
